# zensical-alloy

./: .gitignore  LICENSE  MATERIAL_COMPAT.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  visual-regression.yml
examples/mkdocs-variants/accent-amber/: mkdocs.yml
examples/mkdocs-variants/accent-amber/docs/: index.md
examples/mkdocs-variants/accent-cyan/: mkdocs.yml
examples/mkdocs-variants/accent-cyan/docs/: index.md
examples/mkdocs-variants/compact-layout/: mkdocs.yml
examples/mkdocs-variants/compact-layout/docs/: dense.md  index.md
examples/mkdocs-variants/deep-nav/: mkdocs.yml
examples/mkdocs-variants/deep-nav/docs/: index.md
examples/mkdocs-variants/header-autohide/: mkdocs.yml
examples/mkdocs-variants/header-autohide/docs/: index.md
examples/mkdocs-variants/minimal-features/: mkdocs.yml
examples/mkdocs-variants/minimal-features/docs/: index.md
examples/mkdocs-variants/no-search-no-repo/: mkdocs.yml
examples/mkdocs-variants/system-fonts/: mkdocs.yml
examples/mkdocs-yml/: mkdocs.yml
examples/mkdocs-yml/docs/: index.md
examples/real-world-smoke/fastapi-style/: mkdocs.yml
examples/real-world-smoke/product-handbook/: mkdocs.yml
examples/real-world-smoke/sdk-reference/: mkdocs.yml
examples/zensical-toml/: zensical.toml
examples/zensical-toml/docs/: accent-validation.md  architecture.md  contributing.md  index.md  migrating.md  quality.md  theming.md
scripts/: bump-version.py  bundle-css.py  check-accent-validation.py  smoke.sh  visual-regression.py
zensical_alloy/: __init__.py  main.html  mkdocs_theme.yml
zensical_alloy/partials/: actions.html  header.html  search.html  toc.html
(+79 files in other folders)
